--- a/6.4 Motivation Meme Project/index.html
+++ b/6.4 Motivation Meme Project/index.html
@@ -2,27 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
-  <style>
-    body{
-      background-color: black;
-      color: white;
-    }
-    h1{
-      font-family: libre,baskerville;
-      text-transform: uppercase;
-    }
-    #img{
-      border: 5px white solid;
-      
-    }
-    #position{
-      text-align:center ;
-    }
-  </style>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div id="position" >
